[tool.poetry]
name = "pymongo_inmemory"
version = "0.3.0"
description = "A mongo mocking library with an ephemeral MongoDB running in memory."
authors = ["Kaizen Dorks <kaizendorks@gmail.com>"]
maintainers = [
  "Ertugrul Karademir <ekarademir@gmail.com>",
  "Daniel Jimenez Garcia",
  "Ruben Vasconcelos",
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kaizendorks/pymongo_inmemory"
repository = "https://github.com/kaizendorks/pymongo_inmemory"
keywords = ["mongodb", "testing", "pymongo"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
include = ["LICENSE"]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/kaizendorks/pymongo_inmemory/issues"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-pythonpath = "*"
twine = "*"
wheel = "*"
setuptools = "*"
click = "*"

[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.35"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
